--- a/src/app/backend/documentType/document-type-component/document-type-component.html
+++ b/src/app/backend/documentType/document-type-component/document-type-component.html
@@ -38,6 +38,12 @@
   </div>
 </section>
 
+@if (loading) {
+  <div class="flex justify-center">
+    <mat-spinner></mat-spinner>
+  </div>
+}@else {
+
 <div class="flex flex-col md:mt-6">
   <div class="overflow-x-auto">
     <div class="inline-block min-w-full align-middle">
@@ -98,6 +104,7 @@
     </div>
   </div>
 </div>
+}
 
 <mat-menu #menu="matMenu" [overlapTrigger]="false" yPosition="below">
   <ng-template matMenuContent let-item="item">
