--- a/src/app/backend/layout-backend/layout-backend-component.html
+++ b/src/app/backend/layout-backend/layout-backend-component.html
@@ -100,7 +100,7 @@
             <mat-icon class="me-3" matListItemIcon>trending_up</mat-icon>&nbsp;Courriers sortants
           </mat-expansion-panel-header>
           <mat-nav-list dense>
-            <mat-list-item (click)="drawer.toggle(!XSmallOrSmall)" routerLink="/groupes">
+            <mat-list-item (click)="drawer.toggle(!XSmallOrSmall)" routerLink="/mails/outgoing/external">
               <mat-icon class="me-3" matListItemIcon>supervisor_account</mat-icon>
               <span routerLinkActive="active" matListItemTitle>Externes</span>
             </mat-list-item>
